--- a/Base.html
+++ b/Base.html
@@ -40,7 +40,7 @@
 
             gl.viewport(0,0, canvas.width, canvas.height);
 
-            gl.clearColor(0.89, 0.73, .45, 1.0); //228,188,116 in 256 scale
+            gl.clearColor(0.89, 0.73, .45, 1.0);
             gl.clear(gl.COLOR_BUFFER_BIT);
 
             var program = initShaders(gl, "vertex-shader", "fragment-shader");
@@ -50,14 +50,9 @@
             var colorUniformLocation = gl.getUniformLocation(program, "u_color");
             var buffer = gl.createBuffer();
             gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
-            
 
-            //Hard work is done. Now, let's start with the sunset!
-
-            /*Don't forget minY is NOT the bottom of the canvas since we have a background color.
-            Also don't forget to change the last value when adding new colors since calculations 
-            are based on it*/
-            var vertices = verticalGradient(-1.00, 1.00, -0.8, 0.8, 4);
+            //Don't forget to change numberOfColors as colors are added.
+            var vertices = verticalGradient(-1.0, 1.0, -1.0, 1.0, 5);
 
             gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
 
@@ -65,28 +60,23 @@
             gl.enableVertexAttribArray(vPos);
             gl.vertexAttribPointer(vPos, 2, gl.FLOAT, false, 0, 0);
 
-            /*Now, we get to actually draw stuff.
-            Don't forget to put new vertices in the array.
-            !!They will not show up as an error!! They will just not show up!!
-            */
+            //Now to actually start drawing stuff.
             //We're starting with a gradient, going from gold to dark blue to purple.
+            
+            var colors = [
+                [0.89, 0.73, .45, 1.0],
+                [0.8, 0.59, 0.4, 1.0],
+                [0.56, 0.52, 0.5, 1.0],
+                [0.27, 0.27, 0.3, 1.0],
+                [0.13, 0.24, 0.29, 1.0],
+                [0.04, 0.1, 0.07, 1.0]
+            ];
+            //TODO: Add more colors and change value in verticalGradient() accordingly
 
-            /*TODO: Put all colors in one array like Dr. Brown did for T3HouseFinal
-            I just like how it's organized, and it would save some trouble. Could write
-            a loop super easy (like he did), and since each of these triangles are 4 vertices...
-            */
-
-            gl.uniform4f(colorUniformLocation, 0.8, 0.59, 0.4, 1.0);
-            gl.drawArrays(gl.TRIANGLE_FAN, 0, 4);
-
-            gl.uniform4f(colorUniformLocation, 0.56, 0.52, 0.5, 1.0);
-            gl.drawArrays(gl.TRIANGLE_FAN, 4, 4);
-
-            gl.uniform4f(colorUniformLocation, 0.27, 0.27, 0.3, 1.0);
-            gl.drawArrays(gl.TRIANGLE_FAN, 8, 4);
-
-            gl.uniform4f(colorUniformLocation, 0.13, 0.24, 0.29, 1.0);
-            gl.drawArrays(gl.TRIANGLE_FAN, 12, 4);
+            for (i = 0; i < colors.length; i++) {
+                gl.uniform4f(colorUniformLocation, colors[i][0], colors[i][1], colors[i][2], 1);
+                gl.drawArrays(gl.TRIANGLE_FAN, i * 4, 4);
+            }
         }
     </script>
 
